--- a/src/styles/homescreen.css
+++ b/src/styles/homescreen.css
@@ -26,7 +26,7 @@
 }
 
 .homepage-name h1 {
-  font-size: 48px;
+  font-size: 52px;
   margin-bottom: 20px;
   font-weight: 700;
   animation: fadeIn 1.5s ease-out;
@@ -34,7 +34,7 @@
 }
 
 .homepage-name h2 {
-  font-size: 24px;
+  font-size: 28px;
   margin-bottom: 30px;
   color: rgb(255, 126, 126);
   font-weight: 500;
